设备组列宽调整，补充上传设备组

--- a/src/ThingsGateway.Web.Page/Page/DeviceStatusPage.razor
+++ b/src/ThingsGateway.Web.Page/Page/DeviceStatusPage.razor
@@ -219,7 +219,7 @@
 
                             <MCard Height=@("calc(100vh - 320px)") Style="overflow-y:auto" Flat Class="ml-2 my-4">
                             <MRow NoGutters>
-                                @foreach (var item in UploadDeviceHostService.UploadDeviceCores)
+                                @foreach (var item in _uploadDeviceCores)
                                 {
                                     <MCol Md=12 Cols="12">
                                         <MCard Elevation="1" Class="ma-2">
