1、优化设备状态页，减少signalr刷新所需包大小 2、日志前置等级添加

--- a/src/ThingsGateway.Web.Page/Page/CollectDevicePage.razor
+++ b/src/ThingsGateway.Web.Page/Page/CollectDevicePage.razor
@@ -155,13 +155,12 @@
     {
         if (pluginId > 0)
             context.PluginId = pluginId;
-        if (context.PluginId > 0)
+        else
+            return;
+        if (context.DevicePropertys == null || context.DevicePropertys?.Count == 0)
         {
             context.DevicePropertys = GetDriverProperties(context.PluginId, context.Id);
             await PopupService.EnqueueSnackbarAsync("插件附加属性已更新", AlertTypes.Success);
-        }
-        else
-        {
         }
     }
     List<DependencyProperty> GetDriverProperties(long driverId, long devId)
